[project]
name = "textFSM101"
version = "0.2.0"
authors = [
    {name = "ubaumann", email = "github@m.ubaumann.ch"},
]
requires-python = ">=3.10"
dependencies = [
    "flask>=3",
    "pyaml>=23",
    "gunicorn>=23",
    "textfsm>=1.1.3",
]

[dependency-groups]
dev = ["black>=24", "pylama>=8", "rich>=13"]
